--- a/src/routes/Layout/Layout.scss
+++ b/src/routes/Layout/Layout.scss
@@ -19,9 +19,11 @@
             @include scrollbar();
             @include animate-slide-on-axis(y, layout-slide-up, false, 1rem);
 
+            box-sizing: border-box;
             overflow-x: hidden;
             overflow-y: auto;
             padding: 2rem;
+            padding-bottom: 10rem;
 
             > div > header {
                 position: sticky;
@@ -31,18 +33,18 @@
 
         @media screen and (max-width: $breakpoint-lg) {
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
             grid-template-columns: unset;
             padding: 0;
 
             .route {
-                min-height: calc(100vh - 12rem);
+                height: calc(100vh - 10rem);
             }
         }
 
         @media screen and (max-width: $breakpoint-md) {
             .route {
-                min-height: calc(100vh - 10.6rem);
+                height: calc(100vh - 8rem);
             }
         }
     }
